# MPCR

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DESCRIPTION  InstallScript.sh  LICENSE  LICENSE.md  MKLEnv.sh  NAMESPACE  README.md  clean_build.sh  cleanup  config.sh  configure  doxygen_config  env.sh
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature.md  Tests.md
.gitlab/merge_request_templates/: Bug.md  Documentation.md  Feature.md  Tests.md
R/: MMPR.R  MPCR.R  Operations.R  RcppExports.R  zzz.R
benchmarks/: isSymmetric.R  transpose.R
benchmarks/BenchmarkMMPR/: chol.R  crossprod.R  eigen.R  norm.R  qr.R  rcond.R  run_MMPR_Tile_benchmark.sh  run_MMPR_benchmark.sh  solve.R  svd.R  test.txt  tile_chol.R  tile_gemm.R  tile_trsm.R  triangularsolve.R
benchmarks/BenchmarkMPCR/: chol.R  crossprod.R  eigen.R  norm.R  qr.R  rcond.R  run_MPCR_Tile_benchmark.sh  run_MPCR_benchmark.sh  run_MPCR_benchmark_CPU.sh  run_MPCR_benchmark_GPU.sh  solve.R  svd.R  tile_chol.R  tile_gemm.R  tile_trsm.R  triangularsolve.R
benchmarks/BenchmarkR/: cholRblas.R  crossprodRBlas.R  crossprodRblas.R  eigenRblas.R  normRblas.R  qrRblas.R  rcondRblas.R  run_R_benchmark.sh  solveRblas.R  svdRblas.R  triangularsolveRblas.R
benchmarks/results/: MMPR_1000.txt  MMPR_100k_eigen.txt  MMPR_100k_new.txt  MMPR_10k.txt  MMPR_10k_new.txt  MMPR_15k.txt  MMPR_20k.txt  MMPR_500.txt  MMPR_50k.txt  MMPR_50k_mat_gen.txt  MMPR_50k_new_no_svd_eigen.txt  MMPR_50k_without_eigen_svd.txt  MMPR_5k.txt  R_5k.txt  R_5k_cont.txt
cmake/: CheckInstall.cmake  DetectToolchain.cmake  FindBLAS.cmake  FindR.cmake  FindRLibraryPath.R  ImportBlas.cmake  ImportBlasPP.cmake  ImportCuSolver.cmake  ImportGFortran.cmake  ImportLapack.cmake  ImportLapackPP.cmake  ImportOpenMP.cmake  ImportOpenMP_MacoOS.cmake
cmake/macros/: BuildDependency.cmake
cmake/toolchains/: CudaToolchain.cmake  clang.cmake  gnu.cmake  intel.cmake
cmake/toolchains /: CudaToolchain.cmake
doc/html/: BasicOperationsHelper_8hpp.html  BasicOperationsHelper_8hpp__dep__incl.map  BasicOperationsHelper_8hpp__dep__incl.md5  BasicOperationsHelper_8hpp__incl.map  BasicOperationsHelper_8hpp__incl.md5  BasicOperationsHelper_8hpp_source.html  BasicOperations_8cpp.html  BasicOperations_8cpp__incl.map  BasicOperations_8cpp__incl.md5  BasicOperations_8hpp.html  BasicOperations_8hpp__dep__incl.map  BasicOperations_8hpp__dep__incl.md5  BasicOperations_8hpp__incl.map  BasicOperations_8hpp__incl.md5  BasicOperations_8hpp_source.html  BinaryOperationsHelper_8hpp.html  BinaryOperationsHelper_8hpp__dep__incl.map  BinaryOperationsHelper_8hpp__dep__incl.md5  BinaryOperationsHelper_8hpp__incl.map  BinaryOperationsHelper_8hpp__incl.md5  BinaryOperationsHelper_8hpp_source.html  BinaryOperations_8cpp.html  BinaryOperations_8cpp__incl.map  BinaryOperations_8cpp__incl.md5  BinaryOperations_8hpp.html  BinaryOperations_8hpp__dep__incl.map  BinaryOperations_8hpp__dep__incl.md5  BinaryOperations_8hpp__incl.map  BinaryOperations_8hpp__incl.md5  BinaryOperations_8hpp_source.html  CMakeLists_8txt.html  DataTypeModule_8cpp.html  DataTypeModule_8cpp__incl.map  DataTypeModule_8cpp__incl.md5  DataType_8cpp.html  DataType_8cpp__incl.map  DataType_8cpp__incl.md5  DataType_8hpp.html  DataType_8hpp__dep__incl.map  DataType_8hpp__dep__incl.md5  (+1666 more)
doc/latex/: BasicOperationsHelper_8hpp.tex  BasicOperationsHelper_8hpp__dep__incl.md5  BasicOperationsHelper_8hpp__incl.md5  BasicOperations_8cpp.tex  BasicOperations_8cpp__incl.md5  BasicOperations_8hpp.tex  BasicOperations_8hpp__dep__incl.md5  BasicOperations_8hpp__incl.md5  BinaryOperationsHelper_8hpp.tex  BinaryOperationsHelper_8hpp__dep__incl.md5  BinaryOperationsHelper_8hpp__incl.md5  BinaryOperations_8cpp.tex  BinaryOperations_8cpp__incl.md5  BinaryOperations_8hpp.tex  BinaryOperations_8hpp__dep__incl.md5  BinaryOperations_8hpp__incl.md5  CMakeLists_8txt.tex  DataTypeModule_8cpp.tex  DataTypeModule_8cpp__incl.md5  DataType_8cpp.tex  DataType_8cpp__incl.md5  DataType_8hpp.tex  DataType_8hpp__dep__incl.md5  DataType_8hpp__incl.md5  FloatingPointHandler_8hpp.tex  FloatingPointHandler_8hpp__dep__incl.md5  LinearAlgebraHelper_8hpp.tex  LinearAlgebraHelper_8hpp__dep__incl.md5  LinearAlgebraHelper_8hpp__incl.md5  LinearAlgebraHelper_8hpp_a42c05ea8a3e7426b88fc0b5f43c5728d_cgraph.md5  LinearAlgebraHelper_8hpp_a556693d2cd1d809a57ac90820bc92d07_cgraph.md5  LinearAlgebraHelper_8hpp_a75fa85ebb9800f60acc1a77071aaa89a_cgraph.md5  LinearAlgebraHelper_8hpp_a9a7b43c1453a530ae566122730779418_cgraph.md5  LinearAlgebra_8cpp.tex  (+800 more)
inst/: CITATION
man/: Arthimitics.Rd  BackSolve.Rd  BinaryComparisons.Rd  Bind.Rd  Brackets.Rd  CheckPrecision.Rd  Chol.Rd  Chol2inv.Rd  Concatenate.Rd  Context.Rd  Converters.Rd  Crossprod.Rd  DeepCopy.Rd  Diagonal.Rd  Dimensions.Rd  Eigen.Rd  Extremes.Rd  HyperbolicFunctions.Rd  IsSymetric.Rd  LogFunctions.Rd  MMPR.Rd  MMPRGemm.Rd  MMPRPrint.Rd  MMPRTile.Rd  MMPRTileGemm.Rd  MMPRTilePOTRF.Rd  MMPRTileTRSM.Rd  MMPRTrsm.Rd  MPCR.Rd  MPCRGemm.Rd  MPCRPrint.Rd  MPCRTile.Rd  MPCRTileGemm.Rd  MPCRTilePOTRF.Rd  MPCRTileTRSM.Rd  MPCRTrsm.Rd  MPR-package.Rd  Mathis.Rd  Metadata.Rd  Miscellaneous.Rd  (+14 more)
prerequisites/: README.md
src/: CMakeLists.txt  DataTypeModule.cpp  MPCRTileModule.cpp  MPRTileModule.cpp  Makefile  RcppExports.cpp  rcpp_hello_world.cpp  symbols.rds
src/R/: MPCR.R
src/adapters/: CMakeLists.txt  RBasicUtilities.cpp  RBinaryOperations.cpp  RContextManager.cpp  RHelpers.cpp  RLinearAlgebra.cpp  RMathematicalOperations.cpp
src/data-units/: CMakeLists.txt  DataHolder.cpp  DataType.cpp  MPCRTile.cpp  MPRTile.cpp  Promoter.cpp
src/kernels/: CMakeLists.txt  ContextManager.cpp  MemoryHandler.cpp  Promoter.cpp  RunContext.cpp
src/kernels/cuda/: CMakeLists.txt  CudaMemoryKernels.cu
src/operations/: BasicOperations.cpp  BinaryOperations.cpp  CMakeLists.txt  LinearAlgebra.cpp  MathematicalOperations.cpp  TileLinearAlgebra.cpp
src/operations/concrete/: CMakeLists.txt  CPUHelpers.cpp  CPULinearAlgebra.cpp  GPULinearAlgebra.cpp
src/operations/cuda/: CMakeLists.txt  CudaHelpers.cu  GPUHelpers.cu
vignettes/: MPCR.Rmd
(+161 files in other folders)
